--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/material": "^5.11.16",
+    "@mui/styled-engine-sc": "^5.11.11",
     "@next/font": "13.2.4",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
@@ -16,8 +18,11 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.60.0",
+    "styled-components": "^5.3.9",
     "typescript": "5.0.3"
   }
 }
