--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-markdown": "^8.0.6",
+    "react-query": "^3.39.3",
     "remark-gfm": "^3.0.1",
     "sass": "^1.60.0",
     "styled-components": "^5.3.9",
