--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@material-ui/core": "^4.12.4",
     "@next/font": "13.2.4",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
@@ -19,11 +20,13 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "next-pwa": "^5.6.0",
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-markdown": "^8.0.6",
+    "react-pwa-install": "^1.0.12",
     "react-query": "^3.39.3",
     "remark-gfm": "^3.0.1",
     "sass": "^1.60.0",
@@ -31,6 +34,7 @@
     "typescript": "5.0.3"
   },
   "devDependencies": {
+    "@types/next-pwa": "^5.6.2",
     "@types/styled-components": "^5.1.26"
   }
 }
