--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "axios": "^1.3.5",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "i18next": "^22.4.14",
     "next": "13.2.4",
+    "next-i18next": "^13.2.2",
     "next-pwa": "^5.6.0",
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
     "react-markdown": "^8.0.6",
     "react-pwa-install": "^1.0.12",
